Implementacao de rotina de login e autenticacao, utilizando spring security e jwt para geracao de token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=aproveMe
 #Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_aproveme
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=40028922
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
