--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ spring.application.name=aproveMe
 #Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_aproveme
 spring.datasource.username=postgres
-spring.datasource.password=40028922
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
 #Flyway configuration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+#JWT
+api.secret.key.value=${JWT-SECRET:my-secret-key-value}
 
