--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@
 spring.application.name=aproveMe
 
 #Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_aproveme
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_aproveme
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://db:5432/aprove_me
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
